--- a/index.html
+++ b/index.html
@@ -8,117 +8,118 @@
 </head>
 <body>
 
+<div class="wrapper">
 
-<!-- INPUTS -->
-<pre class="q9-code-preview">
-  <xmp>
-    <input type="text" class="q9-form-control" placeholder="Default">
-  </xmp>
-</pre>
-<input type="text" class="q9-form-control" placeholder="Default">
-<div class="empty-space"></div>
-
-<form>
-
+  <!-- INPUTS -->
   <pre class="q9-code-preview">
     <xmp>
-      <div class="q9-form-group">
-        <label class="q9-input-label" for="exampleInputEmail1">Basic</label>
-        <input type="email" class="q9-form-control" id="exampleInputEmail1" placeholder="Email">
-        <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-      </div>
+      <input type="text" class="q9-form-control" placeholder="Default">
     </xmp>
   </pre>
-  <div class="q9-form-group">
-    <label class="q9-input-label" for="exampleInputEmail1">Basic</label>
-    <input type="email" class="q9-form-control" id="exampleInputEmail1" placeholder="Email">
-    <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-  </div>
+  <input type="text" class="q9-form-control" placeholder="Default">
+  <div class="empty-space"></div>
+
+  <form>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group">
+          <label class="q9-input-label" for="exampleInputEmail1">Basic</label>
+          <input type="email" class="q9-form-control" id="exampleInputEmail1" placeholder="Email">
+          <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group">
+      <label class="q9-input-label" for="exampleInputEmail1">Basic</label>
+      <input type="email" class="q9-form-control" id="exampleInputEmail1" placeholder="Email">
+      <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+    </div>
+
+    <div class="empty-space"></div>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group q9-has-error">
+          <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
+          <input type="password" class="q9-form-control" id="exampleInputPassword1" placeholder="Password">
+          <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group q9-has-error">
+      <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
+      <input type="password" class="q9-form-control" id="exampleInputPassword1" placeholder="Password">
+      <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+    </div>
+
+    <div class="empty-space"></div>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group q9-has-success">
+          <label class="q9-input-label" for="exampleInputSearch1">Success message</label>
+          <input type="search" class="q9-form-control" id="exampleInputSearch1" placeholder="Search">
+          <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group q9-has-success">
+      <label class="q9-input-label" for="exampleInputSearch1">Success message</label>
+      <input type="search" class="q9-form-control" id="exampleInputSearch1" placeholder="Search">
+      <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+    </div>
+
+    <div class="empty-space"></div>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group">
+          <label class="q9-input-label" for="exampleInputText1">Disabled</label>
+          <input type="text" class="q9-form-control" id="exampleInputText1" placeholder="Text" disabled>
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group">
+      <label class="q9-input-label" for="exampleInputText1">Disabled</label>
+      <input type="text" class="q9-form-control" id="exampleInputText1" placeholder="Text" disabled>
+    </div>
+
+    <div class="empty-space"></div>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group">
+          <label class="q9-input-label" for="exampleInputTel1">Click on field (focus)</label>
+          <input type="tel" class="q9-form-control" id="exampleInputTel1" placeholder="Phone number">
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group">
+      <label class="q9-input-label" for="exampleInputTel1">Click on field (focus)</label>
+      <input type="tel" class="q9-form-control" id="exampleInputTel1" placeholder="Phone number">
+    </div>
+
+    <div class="empty-space"></div>
+
+    <pre class="q9-code-preview">
+      <xmp>
+        <div class="q9-form-group">
+          <label class="q9-input-label" for="exampleInputUrl1">Hover it. Border became more grey</label>
+          <input type="url" class="q9-form-control" id="exampleInputUrl1" placeholder="Url" >
+        </div>
+      </xmp>
+    </pre>
+    <div class="q9-form-group">
+      <label class="q9-input-label" for="exampleInputUrl1">Hover it. Border became more grey</label>
+      <input type="url" class="q9-form-control" id="exampleInputUrl1" placeholder="Url" >
+    </div>
+
+  </form>
 
   <div class="empty-space"></div>
 
-  <pre class="q9-code-preview">
-    <xmp>
-      <div class="q9-form-group q9-has-error">
-        <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
-        <input type="password" class="q9-form-control" id="exampleInputPassword1" placeholder="Password">
-        <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-      </div>
-    </xmp>
-  </pre>
-  <div class="q9-form-group q9-has-error">
-    <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
-    <input type="password" class="q9-form-control" id="exampleInputPassword1" placeholder="Password">
-    <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-  </div>
-
-  <div class="empty-space"></div>
-
-  <pre class="q9-code-preview">
-    <xmp>
-      <div class="q9-form-group q9-has-success">
-        <label class="q9-input-label" for="exampleInputSearch1">Success message</label>
-        <input type="search" class="q9-form-control" id="exampleInputSearch1" placeholder="Search">
-        <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-      </div>
-    </xmp>
-  </pre>
-  <div class="q9-form-group q9-has-success">
-    <label class="q9-input-label" for="exampleInputSearch1">Success message</label>
-    <input type="search" class="q9-form-control" id="exampleInputSearch1" placeholder="Search">
-    <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-  </div>
-
-  <div class="empty-space"></div>
-
-  <pre class="q9-code-preview">
-    <xmp>
-      <div class="q9-form-group">
-        <label class="q9-input-label" for="exampleInputText1">Disabled</label>
-        <input type="text" class="q9-form-control" id="exampleInputText1" placeholder="Text" disabled>
-      </div>
-    </xmp>
-  </pre>
-  <div class="q9-form-group">
-    <label class="q9-input-label" for="exampleInputText1">Disabled</label>
-    <input type="text" class="q9-form-control" id="exampleInputText1" placeholder="Text" disabled>
-  </div>
-
-  <div class="empty-space"></div>
-
-  <pre class="q9-code-preview">
-    <xmp>
-      <div class="q9-form-group">
-        <label class="q9-input-label" for="exampleInputTel1">Click on field (focus)</label>
-        <input type="tel" class="q9-form-control" id="exampleInputTel1" placeholder="Phone number">
-      </div>
-    </xmp>
-  </pre>
-  <div class="q9-form-group">
-    <label class="q9-input-label" for="exampleInputTel1">Click on field (focus)</label>
-    <input type="tel" class="q9-form-control" id="exampleInputTel1" placeholder="Phone number">
-  </div>
-
-  <div class="empty-space"></div>
-
-  <pre class="q9-code-preview">
-    <xmp>
-      <div class="q9-form-group">
-        <label class="q9-input-label" for="exampleInputUrl1">Hover it. Border became more grey</label>
-        <input type="url" class="q9-form-control" id="exampleInputUrl1" placeholder="Url" >
-      </div>
-    </xmp>
-  </pre>
-  <div class="q9-form-group">
-    <label class="q9-input-label" for="exampleInputUrl1">Hover it. Border became more grey</label>
-    <input type="url" class="q9-form-control" id="exampleInputUrl1" placeholder="Url" >
-  </div>
-
-</form>
-
-<div class="empty-space"></div>
-
-
+</div>
 
 </body>
 </html>
