Added buttons and titles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <div class="wrapper">
 
   <!-- INPUTS -->
+  <h1 class="q9-h1">Inputs</h1>
+  <div class="empty-spaces"></div>
+
   <pre class="q9-code-preview">
     <xmp>
       <input type="text" class="q9-form-control" placeholder="Default">
@@ -118,6 +121,148 @@
   </form>
 
   <div class="empty-space"></div>
+
+  <!-- BUTTONS-->
+  <h1 class="q9-h1">Buttons</h1>
+  <div class="empty-spaces"></div>
+
+  <h3 class="q9-h3">Default buttons</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <a class="q9-btn" href="#" role="button">Link</a>
+      <button class="q9-btn" type="submit" disabled>Button</button>
+      <input class="q9-btn" type="button" value="Input">
+      <input class="q9-btn" type="submit" value="Submit">
+    </xmp>
+  </pre>
+
+  <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
+  <button class="q9-btn" type="submit" disabled>Button</button>
+  <input class="q9-btn" type="button" value="Input">
+  <input class="q9-btn" type="submit" value="Submit">
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Light buttons</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <a class="q9-btn q9-btn-light" href="#" role="button">Link</a>
+      <button class="q9-btn q9-btn-light" type="submit" disabled>Button</button>
+      <input class="q9-btn q9-btn-light" type="button" value="Input">
+      <input class="q9-btn q9-btn-light" type="submit" value="Submit">
+    </xmp>
+  </pre>
+
+  <a class="q9-btn q9-btn-light" href="#" role="button">Link</a>
+  <button class="q9-btn q9-btn-light" type="submit" disabled>Button</button>
+  <input class="q9-btn q9-btn-light" type="button" value="Input">
+  <input class="q9-btn q9-btn-light" type="submit" value="Submit">
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Small default</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <a class="q9-btn q9-btn-sm" href="#" role="button">Link</a>
+      <button class="q9-btn q9-btn-sm" type="submit" disabled>Button</button>
+      <input class="q9-btn q9-btn-sm" type="button" value="Input">
+      <input class="q9-btn q9-btn-sm" type="submit" value="Submit">
+    </xmp>
+  </pre>
+
+  <a class="q9-btn q9-btn-sm" href="#" role="button">Link</a>
+  <button class="q9-btn q9-btn-sm" type="submit" disabled>Button</button>
+  <input class="q9-btn q9-btn-sm" type="button" value="Input">
+  <input class="q9-btn q9-btn-sm" type="submit" value="Submit">
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Small light</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <a class="q9-btn q9-btn-light q9-btn-sm" href="#" role="button">Link</a>
+      <button class="q9-btn q9-btn-light q9-btn-sm" type="submit" disabled>Button</button>
+      <input class="q9-btn q9-btn-light q9-btn-sm" type="button" value="Input">
+      <input class="q9-btn q9-btn-light q9-btn-sm" type="submit" value="Submit">
+    </xmp>
+  </pre>
+
+  <a class="q9-btn q9-btn-light q9-btn-sm" href="#" role="button">Link</a>
+  <button class="q9-btn q9-btn-light q9-btn-sm" type="submit" disabled>Button</button>
+  <input class="q9-btn q9-btn-light q9-btn-sm" type="button" value="Input">
+  <input class="q9-btn q9-btn-light q9-btn-sm" type="submit" value="Submit">
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Full width</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <button class="q9-btn q9-btn-full-width" type="submit">Button</button>
+    </xmp>
+  </pre>
+  <button class="q9-btn q9-btn-full-width" type="submit">Button</button>
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Danger</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <button class="q9-btn q9-btn-danger" type="submit">Button</button>
+      <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
+    </xmp>
+  </pre>
+  <button class="q9-btn q9-btn-danger" type="submit">Button</button>
+  <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
+
+  <div class="empty-space"></div>
+
+
+  <!-- HEADINGS -->
+  <h1 class="q9-h1">Headings</h1>
+  <div class="empty-spaces"></div>
+  <pre class="q9-code-preview">
+    <xmp>
+      <h1 class="q9-h1">H1 The quick brown fox jumps over the lazy dog</h1>
+      <h2 class="q9-h2">H2 The quick brown fox jumps over the lazy dog</h2>
+      <h3 class="q9-h3">H3 The quick brown fox jumps over the lazy dog</h3>
+      <h4 class="q9-h4">H4 The quick brown fox jumps over the lazy dog</h4>
+      <h5 class="q9-h5">H5 The quick brown fox jumps over the lazy dog</h5>
+      <h6 class="q9-h6">H6 The quick brown fox jumps over the lazy dog</h6>
+    </xmp>
+  </pre>
+
+  <div class="empty-space"></div>
+
+  <h1 class="q9-h1">H1 The quick brown fox jumps over the lazy dog</h1>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
+  <h2 class="q9-h2">H2 The quick brown fox jumps over the lazy dog</h2>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">H3 The quick brown fox jumps over the lazy dog</h3>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
+  <h4 class="q9-h4">H4 The quick brown fox jumps over the lazy dog</h4>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
+  <h5 class="q9-h5">H5 The quick brown fox jumps over the lazy dog</h5>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
+  <h6 class="q9-h6">H6 The quick brown fox jumps over the lazy dog</h6>
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <div class="empty-space"></div>
+
 
 </div>
 
