Added new button colors

--- a/index.html
+++ b/index.html
@@ -123,96 +123,100 @@
   <div class="empty-space"></div>
 
   <!-- BUTTONS-->
-  <h1 class="q9-h1">Buttons</h1>
-  <div class="empty-spaces"></div>
-
   <h3 class="q9-h3">Default buttons</h3>
   <pre class="q9-code-preview">
-    <xmp>
-      <a class="q9-btn" href="#" role="button">Link</a>
-      <button class="q9-btn" type="submit" disabled>Button</button>
-      <input class="q9-btn" type="button" value="Input">
-      <input class="q9-btn" type="submit" value="Submit">
-    </xmp>
-  </pre>
+  <xmp>
+    <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
+    <button class="q9-btn q9-btn-default" type="submit" disabled>Button</button>
+    <input class="q9-btn q9-btn-default" type="button" value="Input">
+    <input class="q9-btn q9-btn-default" type="submit" value="Submit">
+  </xmp>
+</pre>
 
   <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
-  <button class="q9-btn" type="submit" disabled>Button</button>
-  <input class="q9-btn" type="button" value="Input">
-  <input class="q9-btn" type="submit" value="Submit">
+  <button class="q9-btn q9-btn-default" type="submit" disabled>Button</button>
+  <input class="q9-btn q9-btn-default" type="button" value="Input">
+  <input class="q9-btn q9-btn-default" type="submit" value="Submit">
 
   <div class="empty-space"></div>
 
-  <h3 class="q9-h3">Light buttons</h3>
+  <h3 class="q9-h3">Light default buttons</h3>
   <pre class="q9-code-preview">
-    <xmp>
-      <a class="q9-btn q9-btn-light" href="#" role="button">Link</a>
-      <button class="q9-btn q9-btn-light" type="submit" disabled>Button</button>
-      <input class="q9-btn q9-btn-light" type="button" value="Input">
-      <input class="q9-btn q9-btn-light" type="submit" value="Submit">
-    </xmp>
-  </pre>
+  <xmp>
+    <a class="q9-btn q9-btn-default-light" href="#" role="button">Link</a>
+    <button class="q9-btn q9-btn-default-light" type="submit" disabled>Button</button>
+    <input class="q9-btn q9-btn-default-light" type="button" value="Input">
+    <input class="q9-btn q9-btn-default-light" type="submit" value="Submit">
+  </xmp>
+</pre>
 
-  <a class="q9-btn q9-btn-light" href="#" role="button">Link</a>
-  <button class="q9-btn q9-btn-light" type="submit" disabled>Button</button>
-  <input class="q9-btn q9-btn-light" type="button" value="Input">
-  <input class="q9-btn q9-btn-light" type="submit" value="Submit">
+  <a class="q9-btn q9-btn-default-light" href="#" role="button">Link</a>
+  <button class="q9-btn q9-btn-default-light" type="submit" disabled>Button</button>
+  <input class="q9-btn q9-btn-default-light" type="button" value="Input">
+  <input class="q9-btn q9-btn-default-light" type="submit" value="Submit">
 
   <div class="empty-space"></div>
 
-  <h3 class="q9-h3">Small default</h3>
+  <h3 class="q9-h3">Small default and default light buttons</h3>
   <pre class="q9-code-preview">
-    <xmp>
-      <a class="q9-btn q9-btn-sm" href="#" role="button">Link</a>
-      <button class="q9-btn q9-btn-sm" type="submit" disabled>Button</button>
-      <input class="q9-btn q9-btn-sm" type="button" value="Input">
-      <input class="q9-btn q9-btn-sm" type="submit" value="Submit">
-    </xmp>
-  </pre>
+  <xmp>
+    <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" >Button</button>
+    <button class="q9-btn q9-btn-default-light q9-btn-sm" type="submit" >Button</button>
+    <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" disabled>Button</button>
+  </xmp>
+</pre>
 
-  <a class="q9-btn q9-btn-sm" href="#" role="button">Link</a>
-  <button class="q9-btn q9-btn-sm" type="submit" disabled>Button</button>
-  <input class="q9-btn q9-btn-sm" type="button" value="Input">
-  <input class="q9-btn q9-btn-sm" type="submit" value="Submit">
-
-  <div class="empty-space"></div>
-
-  <h3 class="q9-h3">Small light</h3>
-  <pre class="q9-code-preview">
-    <xmp>
-      <a class="q9-btn q9-btn-light q9-btn-sm" href="#" role="button">Link</a>
-      <button class="q9-btn q9-btn-light q9-btn-sm" type="submit" disabled>Button</button>
-      <input class="q9-btn q9-btn-light q9-btn-sm" type="button" value="Input">
-      <input class="q9-btn q9-btn-light q9-btn-sm" type="submit" value="Submit">
-    </xmp>
-  </pre>
-
-  <a class="q9-btn q9-btn-light q9-btn-sm" href="#" role="button">Link</a>
-  <button class="q9-btn q9-btn-light q9-btn-sm" type="submit" disabled>Button</button>
-  <input class="q9-btn q9-btn-light q9-btn-sm" type="button" value="Input">
-  <input class="q9-btn q9-btn-light q9-btn-sm" type="submit" value="Submit">
+  <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" >Button</button>
+  <button class="q9-btn q9-btn-default-light q9-btn-sm" type="submit" >Button</button>
+  <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" disabled>Button</button>
 
   <div class="empty-space"></div>
 
   <h3 class="q9-h3">Full width</h3>
   <pre class="q9-code-preview">
-    <xmp>
-      <button class="q9-btn q9-btn-full-width" type="submit">Button</button>
-    </xmp>
-  </pre>
-  <button class="q9-btn q9-btn-full-width" type="submit">Button</button>
+  <xmp>
+    <button class="q9-btn q9-btn-default q9-btn-full-width" type="submit">Button</button>
+  </xmp>
+</pre>
+  <button class="q9-btn q9-btn-default q9-btn-full-width" type="submit">Button</button>
 
   <div class="empty-space"></div>
 
-  <h3 class="q9-h3">Danger</h3>
+  <h3 class="q9-h3">Danger colors</h3>
   <pre class="q9-code-preview">
-    <xmp>
-      <button class="q9-btn q9-btn-danger" type="submit">Button</button>
-      <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
-    </xmp>
-  </pre>
+  <xmp>
+    <button class="q9-btn q9-btn-danger" type="submit">Button</button>
+    <button class="q9-btn q9-btn-danger-light" type="submit">Button</button>
+    <button class="q9-btn q9-btn-danger-light q9-btn-sm" type="submit">Button</button>
+    <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
+    <button class="q9-btn q9-btn-danger-light" type="submit" disabled>Button</button>
+  </xmp>
+</pre>
   <button class="q9-btn q9-btn-danger" type="submit">Button</button>
+  <button class="q9-btn q9-btn-danger-light" type="submit">Button</button>
+  <button class="q9-btn q9-btn-danger-light q9-btn-sm" type="submit">Button</button>
   <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
+  <button class="q9-btn q9-btn-danger-light" type="submit" disabled>Button</button>
+
+  <div class="empty-space"></div>
+
+  <h3 class="q9-h3">Success colors</h3>
+  <pre class="q9-code-preview">
+  <xmp>
+    <button class="q9-btn q9-btn-success" type="submit">Button</button>
+    <button class="q9-btn q9-btn-success-light" type="submit">Button</button>
+    <button class="q9-btn q9-btn-success-light q9-btn-sm" type="submit">Button</button>
+    <button class="q9-btn q9-btn-success" type="submit" disabled>Button</button>
+    <button class="q9-btn q9-btn-success-light" type="submit" disabled>Button</button>
+  </xmp>
+</pre>
+
+  <button class="q9-btn q9-btn-success" type="submit">Button</button>
+  <button class="q9-btn q9-btn-success-light" type="submit">Button</button>
+  <button class="q9-btn q9-btn-success-light q9-btn-sm" type="submit">Button</button>
+  <button class="q9-btn q9-btn-success" type="submit" disabled>Button</button>
+  <button class="q9-btn q9-btn-success-light" type="submit" disabled>Button</button>
+
 
   <div class="empty-space"></div>
 
