Added styles for textarea and tabs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <form>
 
-    <pre class="q9-code-preview">
+  <pre class="q9-code-preview">
       <xmp>
         <div class="q9-form-group">
           <label class="q9-input-label" for="exampleInputEmail1">Basic</label>
@@ -122,16 +122,70 @@
 
   <div class="empty-space"></div>
 
+  <!-- TEXTAREA -->
+  <h3 class="q9-h3">Textarea</h3>
+  <pre class="q9-code-preview">
+    <xmp>
+      <div class="q9-form-group q9-has-success">
+        <label class="q9-input-label" for="exampleInputPassword1">Default</label>
+        <textarea class="q9-form-control" rows="2" placeholder="Leave your comment"></textarea>
+      </div>
+    </xmp>
+  </pre>
+  <div class="q9-form-group q9-has-success">
+    <label class="q9-input-label" for="exampleInputPassword1">Default</label>
+    <textarea class="q9-form-control"
+              rows="2"
+              placeholder="Leave your comment"
+    ></textarea>
+  </div>
+
+  <div class="empty-space"></div>
+
+  <pre class="q9-code-preview">
+    <xmp>
+      <div class="q9-form-group q9-has-success">
+        <label class="q9-input-label" for="exampleInputPassword1">Success message</label>
+        <textarea class="q9-form-control" rows="1" placeholder="Leave your comment"></textarea>
+        <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+      </div>
+    </xmp>
+  </pre>
+  <div class="q9-form-group q9-has-success">
+    <label class="q9-input-label" for="exampleInputPassword1">Success message</label>
+    <textarea class="q9-form-control" rows="1" placeholder="Leave your comment"></textarea>
+    <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+  </div>
+
+  <div class="empty-space"></div>
+
+  <pre class="q9-code-preview">
+    <xmp>
+      <div class="q9-form-group q9-has-error">
+        <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
+        <textarea class="q9-form-control" rows="4" placeholder="Leave your comment"></textarea>
+        <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+      </div>
+    </xmp>
+  </pre>
+  <div class="q9-form-group q9-has-error">
+    <label class="q9-input-label" for="exampleInputPassword1">Error message</label>
+    <textarea class="q9-form-control" rows="4" placeholder="Leave your comment"></textarea>
+    <span class="q9-help-msg">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+  </div>
+
+  <div class="empty-space"></div>
+
   <!-- BUTTONS-->
   <h3 class="q9-h3">Default buttons</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
-    <button class="q9-btn q9-btn-default" type="submit" disabled>Button</button>
-    <input class="q9-btn q9-btn-default" type="button" value="Input">
-    <input class="q9-btn q9-btn-default" type="submit" value="Submit">
-  </xmp>
-</pre>
+    <xmp>
+      <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
+      <button class="q9-btn q9-btn-default" type="submit" disabled>Button</button>
+      <input class="q9-btn q9-btn-default" type="button" value="Input">
+      <input class="q9-btn q9-btn-default" type="submit" value="Submit">
+    </xmp>
+  </pre>
 
   <a class="q9-btn q9-btn-default" href="#" role="button">Link</a>
   <button class="q9-btn q9-btn-default" type="submit" disabled>Button</button>
@@ -142,13 +196,13 @@
 
   <h3 class="q9-h3">Light default buttons</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <a class="q9-btn q9-btn-default-light" href="#" role="button">Link</a>
-    <button class="q9-btn q9-btn-default-light" type="submit" disabled>Button</button>
-    <input class="q9-btn q9-btn-default-light" type="button" value="Input">
-    <input class="q9-btn q9-btn-default-light" type="submit" value="Submit">
-  </xmp>
-</pre>
+    <xmp>
+      <a class="q9-btn q9-btn-default-light" href="#" role="button">Link</a>
+      <button class="q9-btn q9-btn-default-light" type="submit" disabled>Button</button>
+      <input class="q9-btn q9-btn-default-light" type="button" value="Input">
+      <input class="q9-btn q9-btn-default-light" type="submit" value="Submit">
+    </xmp>
+  </pre>
 
   <a class="q9-btn q9-btn-default-light" href="#" role="button">Link</a>
   <button class="q9-btn q9-btn-default-light" type="submit" disabled>Button</button>
@@ -159,12 +213,12 @@
 
   <h3 class="q9-h3">Small default and default light buttons</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" >Button</button>
-    <button class="q9-btn q9-btn-default-light q9-btn-sm" type="submit" >Button</button>
-    <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" disabled>Button</button>
-  </xmp>
-</pre>
+    <xmp>
+      <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" >Button</button>
+      <button class="q9-btn q9-btn-default-light q9-btn-sm" type="submit" >Button</button>
+      <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" disabled>Button</button>
+    </xmp>
+  </pre>
 
   <button class="q9-btn q9-btn-default q9-btn-sm" type="submit" >Button</button>
   <button class="q9-btn q9-btn-default-light q9-btn-sm" type="submit" >Button</button>
@@ -174,24 +228,24 @@
 
   <h3 class="q9-h3">Full width</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <button class="q9-btn q9-btn-default q9-btn-full-width" type="submit">Button</button>
-  </xmp>
-</pre>
+    <xmp>
+      <button class="q9-btn q9-btn-default q9-btn-full-width" type="submit">Button</button>
+    </xmp>
+  </pre>
   <button class="q9-btn q9-btn-default q9-btn-full-width" type="submit">Button</button>
 
   <div class="empty-space"></div>
 
   <h3 class="q9-h3">Danger colors</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <button class="q9-btn q9-btn-danger" type="submit">Button</button>
-    <button class="q9-btn q9-btn-danger-light" type="submit">Button</button>
-    <button class="q9-btn q9-btn-danger-light q9-btn-sm" type="submit">Button</button>
-    <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
-    <button class="q9-btn q9-btn-danger-light" type="submit" disabled>Button</button>
-  </xmp>
-</pre>
+    <xmp>
+      <button class="q9-btn q9-btn-danger" type="submit">Button</button>
+      <button class="q9-btn q9-btn-danger-light" type="submit">Button</button>
+      <button class="q9-btn q9-btn-danger-light q9-btn-sm" type="submit">Button</button>
+      <button class="q9-btn q9-btn-danger" type="submit" disabled>Button</button>
+      <button class="q9-btn q9-btn-danger-light" type="submit" disabled>Button</button>
+    </xmp>
+  </pre>
   <button class="q9-btn q9-btn-danger" type="submit">Button</button>
   <button class="q9-btn q9-btn-danger-light" type="submit">Button</button>
   <button class="q9-btn q9-btn-danger-light q9-btn-sm" type="submit">Button</button>
@@ -202,14 +256,14 @@
 
   <h3 class="q9-h3">Success colors</h3>
   <pre class="q9-code-preview">
-  <xmp>
-    <button class="q9-btn q9-btn-success" type="submit">Button</button>
-    <button class="q9-btn q9-btn-success-light" type="submit">Button</button>
-    <button class="q9-btn q9-btn-success-light q9-btn-sm" type="submit">Button</button>
-    <button class="q9-btn q9-btn-success" type="submit" disabled>Button</button>
-    <button class="q9-btn q9-btn-success-light" type="submit" disabled>Button</button>
-  </xmp>
-</pre>
+    <xmp>
+      <button class="q9-btn q9-btn-success" type="submit">Button</button>
+      <button class="q9-btn q9-btn-success-light" type="submit">Button</button>
+      <button class="q9-btn q9-btn-success-light q9-btn-sm" type="submit">Button</button>
+      <button class="q9-btn q9-btn-success" type="submit" disabled>Button</button>
+      <button class="q9-btn q9-btn-success-light" type="submit" disabled>Button</button>
+    </xmp>
+  </pre>
 
   <button class="q9-btn q9-btn-success" type="submit">Button</button>
   <button class="q9-btn q9-btn-success-light" type="submit">Button</button>
@@ -266,6 +320,74 @@
   <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
   <div class="empty-space"></div>
+
+  <!-- TABS -->
+  <h1 class="q9-h1">Tabs</h1>
+  <div class="empty-spaces"></div>
+
+  <pre class="q9-code-preview">
+    <xmp>
+      <uib-tabset active="active"
+                  class="q9-tabset">
+        <uib-tab index="0" heading="Active"></uib-tab>
+        <uib-tab index="1" heading="Default"></uib-tab>
+        <uib-tab index="2" heading="Disabled" disable="$ctrl.disabled"></uib-tab>
+      </uib-tabset>
+    </xmp>
+  </pre>
+
+  <div class="q9-tabset">
+    <ul class="nav nav-tabs">
+      <li class="uib-tab nav-item"
+          ng-click="vm.setTab(0)"
+          ng-class="{active: vm.activeTab == 0}">
+        <a href=""
+           index="0"
+           class="nav-link">
+          Active
+        </a>
+      </li>
+      <li class="uib-tab nav-item"
+          ng-click="vm.setTab(1)"
+          ng-class="{active: vm.activeTab == 1}">
+        <a href=""
+           index="1"
+           class="nav-link">
+          Default
+        </a>
+      </li>
+      <li class="uib-tab nav-item"
+          ng-click="vm.setTab(2)"
+          ng-class="{active: vm.activeTab == 2}">
+        <a href=""
+           index="2"
+           class="nav-link">
+          Default
+        </a>
+      </li>
+      <li class="uib-tab nav-item"
+          ng-click="vm.setTab(3)"
+          ng-class="{active: vm.activeTab == 3}">
+        <a href=""
+           index="3"
+           class="nav-link">
+          Default
+        </a>
+      </li>
+      <li class="uib-tab nav-item disabled">
+        <a href=""
+           index="4"
+           class="nav-link">
+          Disabled
+        </a>
+      </li>
+    </ul>
+
+    <div class="tab-content" style="margin-top: 10px;">
+      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    </div>
+  </div>
+
 
 
 </div>
